--- a/app/src/main/res/layout/item_channel.xml
+++ b/app/src/main/res/layout/item_channel.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
-        android:text="硅谷视频"
+        android:text="安卓视频"
         android:textColor="#000"
         android:textSize="12sp" />
 </LinearLayout>
