--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:padding="10dp">
 
         <ImageButton
-            android:id="@+id/ib_login_back"
+            android:id="@+id/ib_register_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/top_bar_left_back" />
@@ -58,7 +58,7 @@
 
             <EditText
 
-                android:id="@+id/et_login_phone"
+                android:id="@+id/et_register_phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -91,7 +91,7 @@
                 android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/et_login_pwd"
+                android:id="@+id/et_register_pwd"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -102,27 +102,63 @@
                 android:textSize="15sp" />
 
             <ImageButton
-                android:id="@+id/ib_login_visible"
+                android:id="@+id/ib_register_visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/new_password_drawable_invisible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#fff"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:gravity="center_vertical"
+                android:text="确认密码"
+                android:textColor="#464646"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/et_register_tpwd"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="请输入密码"
+                android:inputType="textPassword"
+                android:textSize="15sp" />
+
+            <ImageButton
+                android:id="@+id/ib_register_tvisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/new_password_drawable_invisible" />
         </LinearLayout>
 
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_cart_bg_selector"
             android:padding="10dp"
-            android:text="登录"
+            android:text="注册"
             android:textColor="#fff" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="点击登录，表示同意《用户协议》" />
+            android:text="点击注册，表示同意《用户协议》" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -130,65 +166,24 @@
             android:layout_margin="10dp">
 
             <TextView
-                android:id="@+id/tv_login_register"
+                android:id="@+id/tv_register_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
                 android:clickable="true"
-                android:text="@string/zhucexieyi"
+                android:text="登录账号"
                 android:textColor="#ed4444" />
 
             <TextView
-                android:id="@+id/tv_login_forget_pwd"
+                android:id="@+id/tv_register_forget_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:clickable="true"
-                android:text="忘记密码?"
+                android:text="请多关照"
                 android:textColor="#464646" />
         </RelativeLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="其他登录方式" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:background="#fff"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/ib_weibo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@null"
-                android:src="@drawable/icon_weibo" />
-
-            <ImageButton
-                android:id="@+id/ib_qq"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@null"
-                android:src="@drawable/icon_share_qq" />
-
-            <ImageButton
-                android:id="@+id/ib_wechat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="@null"
-                android:src="@drawable/icon_weixin" />
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
